# rust_template

./: .cargo_options.toml  .gitattributes  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  Makefile.toml  README.md  README.template.md  _workspace.Cargo.toml  bacon.toml  build.rs  cliff.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  setup.ps1  setup.sh
.extras/: .cargo_options.toml  _workspace.Cargo.toml  justfile
.extras/snippets/: called_from_dir.rs  cli.rs  general.rs  levenshtein_dist.rs  merge_toml_values.rs  redux_store.rs
.extras/snippets/macros/: macros.rs  simple.rs
.github/: CODEOWNERS  _publish.yml
.github/ISSUE_TEMPLATE/: 01-bug.yml  04-build-problem.yml  config.yml
.github/actions/checkout/: action.yml
.github/actions/setup-rust/: action.yml
.github/scripts/: promote-draft-release.sh
.github/workflows/: build.yml  docs.yml  draft.yml  format.yml  publish.yml  test.yml
assets/: generate-assets.sh
src/: error.rs  main.rs  prelude.rs
