cargo-features = [ "codegen-backend" ]
# cargo-features = ["profile-rustflags", "trim-paths"] # required for both trimming paths and setting rustflags
# cargo-features = ["codegen-backend"] 
# The aboe also needs the profile.dev to be uncommented to use the cranelift backend
[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

# For running the main server as a watch call
# cargo watch -q -c -w src/ -x run


[dependencies]
# eyre = "*"
# dotenvy = "*"
# futures = "*"

# Base dependencies/Commons
# reqwest = { version = "*", features = ["cookies", "json", "multipart", "stream"] }
# uuid = { version = "*", features = ["v4"] }
# serde = { version = "*", features = ["derive"] }
# serde_json = "*"
thiserror = "*"
# tokio = { version = "*", features = ["full", "tracing"] }

# Logging and tracing
# tracing = "*"
# tracing-subscriber = { version = "*", features = [
#     "ansi",
#     "chrono",
#     "env-filter",
#     "serde",
#     "std",
# ] }


# Extra stuff
# tokio-util = { version = "*", features = ["codec"] }
# toml = "*"

# Utilities
# async-trait = "*"
# static-toml = "*"
# walkdir = "*"
# chrono = "*"
# itertools = "*"


[profile.dev.package."*"]
opt-level = 3
codegen-units = 1


# [profile.dev]
# codegen-backend = "cranelift"

[profile.dev]
opt-level = 1
codegen-units = 256
incremental = true
#rustflags = ["-Zthreads=16" ]

codegen-backend = "cranelift"

[profile.release]
opt-level = 3
codegen-units = 1
debug = "none"
debug-assertions = false
incremental = true
# trim-paths = "all"
#rustflags = ["-Zthreads=16" ]

# strip = "symbols" # Leave off @ w
# lto = "fat" ## Can't use with cranelift yet
# panic = "unwind"
